[package]
name = "wget"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.17.11"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }

tokio = { version = "1.43.0", features = ["full"]}
url = "2.5.4"
walkdir = "2.5.0"

